--- a/Exercicios/desafio.010/stilo/android.css
+++ b/Exercicios/desafio.010/stilo/android.css
@@ -46,7 +46,7 @@ header > h1 {
     font-weight: normal;
     text-align: center;
     padding-top: 40px;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
     text-shadow: 4px 2px 1px black;
 }
 header > p {
