--- a/Exercicios/desafio.012/style.css
+++ b/Exercicios/desafio.012/style.css
@@ -29,6 +29,9 @@ header {
     background-color: black;
     color: white;
     text-align: center;
+    background-image: url(imagens/imagem01.jpg);
+    background-position: center center;
+    background-size: cover;
 
 }
 header > h1 {
@@ -36,9 +39,7 @@ header > h1 {
     font-variant: small-caps;
     font-family: var(--font2);
     font-size: 10vw;
-    
-    
-
+    text-shadow: 0px 0px 10px black;
 }
 header > p {
     padding-bottom: 35px;
@@ -50,8 +51,11 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--font3);
-    font-size: 5vw;
+    font-size: 3vw;
     
+}
+section > p {
+    padding-bottom: 3em;
 }
 section.normal {
     background-color: rgb(255, 220, 156);
@@ -60,14 +64,41 @@ section.normal {
 section.imagem {
     background-color: rgb(32, 31, 31);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.461);
+    background-attachment: fixed;
 }
 section.imagem > p {
-    width: 300px;
+    width: 40vw;
     background-color: rgba(0, 0, 0, 0.306);
+    padding: 10px;
+
+}
+section.normal > p {
+    background-color: white;
+    width: 40vw;
+    padding: 10px;
+}
+section#imagem01 {
+    background-image: url(imagens/imagem02.jpg);
+    background-position: center center;
+    background-size: cover;
+
+}
+section#imagem02 {
+    background-image: url(imagens/imagem03.jpg);
+    background-position: left center;
+    background-size: cover;
+
+}
+section#imagem03 {
+    background-image: url(imagens/imagem04.jpg);
+    background-position: left center;
+    background-size: cover;
 
 }
 footer {
     background-color: black;
+    font-family: var(--font1);
     color: white;
     text-align: center;
     padding: 10px;
